# Quorum

./: .env.example  .gitignore  ANALYSIS_AND_REFACTORING.md  CIA_ROADMAP.md  COMPREHENSIVE_ALGORITHM_ANALYSIS.md  CONSENSUS_ENGINE_DEEP_DIVE.md  CONTRIBUTING.md  README.md  __init__.py  config.py  config.yaml  install.sh  pyproject.toml
.github/: FUNDING.yml
adapters/: __init__.py  anthropic.py  base.py  cohere.py  gemini.py  ollama.py  openai.py  openai_compat.py  openrouter.py
cli/: clean.py  config_cmd.py  doctor.py  main.py  repair.py  setup.py
core/: engine.py  reputation.py  router.py  voting.py
examples/: learning_loop.md
observability/: metrics.py
quorum/: config.py  engine.py  main.py
quorum/adapters/: anthropic.py  base.py  ollama.py  openai.py  openrouter.py
quorum/cli/: main.py
quorum/core/: engine.py  reputation.py  router.py  voting.py
quorum/server/: api.py
server/: api.py  graphql.py  mcp.py
storage/: cache.py  db.py
tests/: benchmark_voting.py  test_adapters.py  test_clean.py  test_engine_pending_outcomes.py  test_improvements.py  test_mcp.py  test_repair.py  test_reputation.py  test_router.py  test_router_api.py  test_voting.py  test_voting_improvements.py
