[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quorum"
version = "0.1.0"
description = "Consensus reasoning engine that orchestrates multiple LLMs in parallel"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Marko Tiosavljevic" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "mcp>=1.0",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "strawberry-graphql[fastapi]>=0.235",
    "prometheus-client>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
semantic = [
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]
cache = [
    "redis>=5.0",
]

[project.scripts]
quorum = "cli.main:app"

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "adapters*", "server*", "storage*", "cli*", "observability*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
